--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "better-auth": "1.3.24",
     "drizzle-orm": "^0.44.5",
     "hono": "4.9.9",
+    "lucide-react": "^0.562.0",
     "next": "16.0.10",
     "postgres": "^3.4.7",
     "react": "19.2.3",
